--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,9 @@ eclipse {
 	}
 	classpath {
 		containers 'org.springsource.ide.eclipse.gradle.classpathcontainer'
+		plusConfigurations += [configurations.providedCompile]
+		plusConfigurations += [configurations.loggingLib]
+		plusConfigurations += [configurations.testLib]
 	}
 }
 
@@ -84,7 +87,10 @@ ext {
 
 dependencies {
 
-	ext.libsBaseDir = 's:/eclipse_workspaces/DPT_II_2/dependency-management-project/'
+	compile fileTree(dir: "../data-model/build/libs", include: '*.jar')
+	
+
+	ext.libsBaseDir = '../dependency-management-project/'
 
 	//ext.datamodelVersion = '1.0'
 	
@@ -96,9 +102,9 @@ dependencies {
 	providedCompile fileTree(dir: "${libsBaseDir}${libCompile}", include: '*.jar')
 	providedCompile fileTree(dir: "${libsBaseDir}${libProvidedCompile}", include: '*.jar')	
 	
-	compile fileTree(dir: "${libsBaseDir}${libDrools}", include: '*.jar')
+	providedCompile fileTree(dir: "${libsBaseDir}${libDrools}", include: '*.jar')
 	
-	compile fileTree(dir: "${libsBaseDir}${libLogging}", include: '*.jar')
+	providedCompile fileTree(dir: "${libsBaseDir}${libLogging}", include: '*.jar')
 	
 	//providedCompile fileTree(dir: "${libsBaseDir}${libCompile}", include: '*.jar')
 	
